[package]
name = "py-bip39-bindings"
description = "Python bindings for tiny-bip39 RUST crate"
authors=["Stichting Polkascan (Polkascan Foundation)"]
version = "0.1.10"
repository = "https://github.com/polkascan/py-bip39-bindings"
homepage = "https://github.com/polkascan/py-bip39-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
hmac = "0.7.0"
pbkdf2 = { version = "0.3.0", default-features = false }
sha2 = "0.8.2"
tiny-bip39 = { version = "0.8.2", default-features = true }

[lib]
name = "bip39"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[package.metadata.maturin]
maintainer = "Stichting Polkascan (Polkascan Foundation)"
maintainer-email = "legal@polkascan.org"
classifier = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
