[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry]
name = "py-bip39-bindings"
version = "0.6.2"
description = "Python bindings for tiny-bip39 RUST crate"
authors = ["openAware B.V. <legal@openaware.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
