[build-system]
requires = ["maturin>=1.7.0,<1.8.0"]
build-backend = "maturin"

[project]
name = "py-bip39-bindings"
version = "0.2.0"
description = "Python bindings for tiny-bip39 RUST crate"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {email = "info@polkascan.org"},
  {name = "Polkascan Foundation"}
]
maintainers = [
  {name = "Polkascan Foundation", email = "info@polkascan.org"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
homepage = "https://github.com/polkascan/py-bip39-bindings"
repository = "https://github.com/polkascan/py-bip39-bindings"
